# lobsterpot

./: Cargo.toml  README.md  Recommended_File_Structure.md  requirements.txt
.cargo/: config.toml
Python/: lobsterpot_stage_1-0-13.py
Python/py_modularised/: network_monitoring.py  utilities.py
Python/py_modules_fin/: main.py  network_monitoring.py  theat_detection.py
docs/: Password Module.txt  and_claude_begins.md  and_the_iterating_begins.md  claude_Builds_builds.md  claude_fix_1.md  claude_starts_code.md  claudes_assess_contd.md  don't_switch_to_msvc.md  fixing_cargo_toml.md  full_lobsterpot_mo_setup.rs  how_to_make_launchable.md  integrating_alienvault_otx_url_analysis.md  last_err_output _from_compiler.txt  lobsterpot_overview.md  prev_err_output_from_compiler.txt  python-exe-or-C++.md  setting_swarm_logics.rs
lobsterpot_rust/: core.rs
modularised/: logging_analysis.py  main.py  ml_models.py  password_cracking.py  self_healing.py  to_modularize_your_python_script.md
modules_fin/: database_operations.py  fren_i_baffle.py  logging_anaysis.py  ml_models.py  modularization_esplained.md  modularization_final_touches.md
src/: AlienVault_OTX_API_Key.env  Cargo.toml  integrate.rs  main.rs
src/coordination/: mesh.rs
src/database/: models.rs
src/healing/: components.rs  errors.rs  mod.rs  monitor.rs
src/logging/: database.rs  logger.rs  mod.rs  models.rs
src/ml/: isolation_forest.rs  mod.rs
src/ml/ganglion/: cellular.rs  trainer.rs
src/modularised/: data_processing.py  database_operations.py  threat_detecting.py
src/modules_fin/: data_processing.py  password_cracking.py  self_healing.py  utilities.py
src/network/: features.rs  firewall.rs  mod.rs  network.rs
src/password/: password.rs  sequences.rs
src/src/: main.rs  module_map.txt
src/src/database/: migrations.rs  mod.rs  threat_db.rs
src/src/healing/: monitor.rs
src/src/logging/: analyzer.rs  database.rs  mod..rs
src/src/ml/: isolation_forest.rs
src/src/ml/ganglion/: layers.rs  mod.rs  network.rs
src/src/network/: monitor.rs
src/src/password/: cracker.rs  mod.rs  mutations.rs  rainbow.rs
src/src/threat/: detector.rs
src/src_old/: Cargo.toml  main.rs
src/src_old/database/: database.rs
src/src_old/healing/: healing.rs
src/src_old/logging/: logging.rs
src/src_old/ml/: ml.rs
src/src_old/ml/ganglion/: ml_brain.rs
src/src_old/network/: network.rs  prod_cosume.rs
src/src_old/password/: password.rs  rainbow.rs
src/src_old/threat/: threat.rs
src/sub_to_protecc_tomls/: build.rs  isolation_forest.old  main.rs
src/threat/: detector.rs
