[package]
name = "lobsterpot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime & Features
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization & Data Formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
csv = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "json"] }

# Network & Protocol
pcap = "1.1.0"
pnet = "0.34.0"
ipnetwork = "0.20.0"
ipnet = "2.9"
url = "2.5"
trust-dns-resolver = "0.23"
bytes = "1.5"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# Logging & Tracing
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Data Processing & ML
ndarray = "0.15"
polars = { version = "0.35", features = ["lazy"] }
tch = "0.14"  # PyTorch bindings
statrs = "0.16"

# Concurrency & Threading
rayon = "1.8"
dashmap = "5.5"

# Cryptography & Hashing
sha2 = "0.10"

# System Information
sysinfo = "0.29"
memmap2 = "0.7"

# Utilities
rand = "0.8"
rand_distr = "0.4"
regex = "1.10"
itertools = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
cached = "0.46"
indicatif = "0.17"  # Progress bars